--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/btnSettings" />
+        app:layout_constraintRight_toLeftOf="@+id/btnSettings"
+        android:onClick="clickRefresh"/>
 
     <Button
         android:id="@+id/btnSettings"
